2009-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Revert the global attribute xml:space="preserve"
	because Firefox 3 messes up badly when it is present.

2009-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* share/LaTeX/Makefile.am:   Add ${prefix}/usr in front of the 
	install directory for latex files.  This probably still doesn't work
	correctly, because kpsexpand may not return a reasonable path.
	But at least if you have write permission to ${prefix} then
	'make install' will not fail.
	Bugfix #2798303

	* share/LaTeX/Makefile.am term/lua/TODO */gnuplot-lua-tikz.sty:
	Move gnuplot-lua-tikz.sty from term/lua/ to share/LaTeX/ so that it can
	be installed along with other latex support files.

	* configure.in:  Issue a warning that the BSD editline library does not
	handle multibyte character encodings.  That makes it pretty useless in a
	UTF-8 environment.  This is not something we can fix.
	Bug #2790153

2009-05-30  Thomas Sefzick <thse@users.sourceforge.net>

	* src/graph3d.c (do_3dplot):  Adjust position of 3D plot with
	'set view equal xyz' so that the center of rotation is at the center
	of the screen.
	Bugfix #2797226

2009-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_mouse.js:  Give each plot its own
	namespace, so that multiple mouseable plots in the same document do
	not overwrite each other's mouse readout.

	* demo/cities.dem demo/html/Makefile.canvas demo/html/webify_canvas.pl
	demo/html/index.canvas demo/html/mousebox.template
	demo/html/canvas_utf8.dem:
	Add scripts to generate a demo set for the canvas terminal.

	* term/js/README:  Provide some documentation on using the canvas
	terminal to create web pages, and on known browser quirks.

2009-05-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  Javascript output using the "name" option now
	initializes the mouse and zoom tracking for each plot.  This will be